# trace-foreign-calls

./: .gitignore  README.md  cabal.project  cabal.project.ci  cabal.project.plugin-9.10.0.20240413  cabal.project.plugin-9.12.1  cabal.project.plugin-9.6.4  cabal.project.plugin-9.8.2  trace-foreign-calls.cabal
.github/workflows/: haskell-ci.yml
example-pkg-A/: example-pkg-A.cabal
example-pkg-A/cbits/: cbits.c  cbits.h
example-pkg-A/src/: ExamplePkgA.hs
example-pkg-A/test/: TestA.hs
example-pkg-B/: example-pkg-B.cabal
example-pkg-B/src/: ExamplePkgB.hs
example-pkg-B/test/: TestB.hs
src/Plugin/: TraceForeignCalls.hs
src/Plugin/TraceForeignCalls/: Instrument.hs
test/: Main.hs
test-cbits/: answer.c  answer.h  test_cbits.c
test/Test/TraceForeignCalls/: UsePlugin.hs
trace-foreign-calls/: CHANGELOG.md  LICENSE  README.md  trace-foreign-calls.cabal
trace-foreign-calls/src/Plugin/: TraceForeignCalls.hs
trace-foreign-calls/src/Plugin/TraceForeignCalls/: Instrument.hs  Options.hs
trace-foreign-calls/src/Plugin/TraceForeignCalls/GHC/: Shim.hs  Util.hs
trace-foreign-calls/src/Plugin/TraceForeignCalls/Util/: GHC.hs  Shim.hs
trace-foreign-calls/test/: Main.hs
trace-foreign-calls/test-cbits/: test_cbits.h
trace-foreign-calls/test/Test/TraceForeignCalls/: UsePlugin.hs
