cabal-version:      3.0
name:               example-pkg-B
version:            0.1.0
synopsis:           Example package B
description:        This is an example of a package with a /dependency/ that
                    imports a foreign function. We want to be able to enable
                    the plugin on that dependency, without changing its
                    cabal file.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple
tested-with:        GHC ==9.12.1

common lang
  ghc-options:
      -Wall
  build-depends:
      -- For now we don't support ghc < 9.12
      base >= 4.21 && < 4.22
  default-language:
      GHC2021

library
  import:
      lang
  exposed-modules:
      ExamplePkgB
  hs-source-dirs:
      src
  build-depends:
      example-pkg-A >= 0.1 && < 2
    , bytestring
    , zlib

test-suite test-B
  import:
      lang
  ghc-options:
      -main-is TestB
  type:
      exitcode-stdio-1.0
  main-is:
      test/TestB.hs
  build-depends:
      example-pkg-B
