cabal-version:      3.0
name:               trace-foreign-calls
version:            0.1.0
synopsis:           Source plugin for tracing foreign calls through the eventlog
description:        The eventlog records when foreign calls are made, but does
                    not record their names. If you compile your code (and its
                    dependencies) with this plugin, every foreign call will
                    wrapped in a function that writes events to the eventlog
                    before and after the foreign call that include more
                    information about the function.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Edsko de Vries
maintainer:         edsko@well-typed.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: test-cbits/test_cbits.h
                    test-cbits/test_cbits.c
tested-with:        GHC ==9.6.4
                    GHC ==9.8.2
                    GHC ==9.10.1

source-repository head
  type:     git
  location: https://github.com/well-typed/trace-foreign-calls

common lang
  build-depends:
      base >= 4.18 && < 4.21
  default-language:
      GHC2021
  ghc-options:
      -Wall
      -Wredundant-constraints
      -Wprepositive-qualified-module
      -Widentities
      -Wunused-packages

library
  import:
      lang
  exposed-modules:
      Plugin.TraceForeignCalls
  other-modules:
      Plugin.TraceForeignCalls.Instrument
      Plugin.TraceForeignCalls.Options
      Plugin.TraceForeignCalls.Util.GHC
      Plugin.TraceForeignCalls.Util.Shim
  hs-source-dirs:
      src
  build-depends:
      -- dependencies intentionally kept at a minimum
      -- (we want to be able to build the boot libs with this plugin)
    , ghc >= 9.6 && < 9.14
    , ghc-boot

test-suite test-trace-foreign-calls
  import:
      lang
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  include-dirs:
     test-cbits
  main-is:
      Main.hs
  other-modules:
      Test.TraceForeignCalls.UsePlugin
  c-sources:
      test-cbits/test_cbits.c
  build-depends:
      -- internal dependencies
      trace-foreign-calls
  build-depends:
      -- external dependencies
    , tasty
    , tasty-hunit

